tests/baselines/reference/libMembers.errors.txt
tests/cases/compiler/libMembers.ts(4,3): error TS2339: Property 'subby' does not exist on type 'string'.
tests/cases/compiler/libMembers.ts(9,16): error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
tests/cases/compiler/libMembers.ts(12,15): error TS2339: Property 'prototype' does not exist on type 'C'.


==== tests/cases/compiler/libMembers.ts (3 errors) ====
    var s="hello";
    s.substring(0);
    s.substring(3,4);
    s.subby(12);   // error unresolved
      ~~~~~
!!! error TS2339: Property 'subby' does not exist on type 'string'.
    String.fromCharCode(12);
    module M {
        export class C {
        }
        var a=new C[];
                   ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        a.length;
        a.push(new C());
        (new C()).prototype;
                  ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type 'C'.
    }
    
    